// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases/ destructure pattern array pattern in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "elements": [
              {
                "kind": 10117,
                "name": "state",
              },
              {
                "kind": 10117,
                "name": "setState",
              },
            ],
            "kind": 10178,
          },
          "init": {
            "arguments": [],
            "callee": {
              "kind": 10117,
              "name": "useState",
            },
            "kind": 10167,
            "optional": false,
          },
          "kind": 10140,
        },
      ],
      "kind": 10139,
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;

exports[`cases/ destructure pattern object pattern in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "kind": 10176,
            "properties": [
              {
                "computed": false,
                "key": {
                  "kind": 10117,
                  "name": "data",
                },
                "kind": 10177,
                "shorted": false,
                "value": undefined,
              },
              {
                "computed": false,
                "key": {
                  "kind": 10117,
                  "name": "name",
                },
                "kind": 10177,
                "shorted": false,
                "value": undefined,
              },
              {
                "computed": false,
                "key": {
                  "kind": 10117,
                  "name": "value",
                },
                "kind": 10177,
                "shorted": false,
                "value": undefined,
              },
            ],
          },
          "init": {
            "kind": 10117,
            "name": "state",
          },
          "kind": 10140,
        },
      ],
      "kind": 10139,
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;
